# Personal-Assistant-Waifu

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  avatar.md  companion-sites.md  cool-ai-projects.md  skills.md
bench/: Cargo.toml  build.rs  onnx_compat.c
bench/src/: main.rs
client/: eslint.config.js  index.html  package.json  vite.config.ts
client/scripts/: preinstall.cjs
client/src/: App.tsx  main.tsx  routing.tsx  styles.css
client/src/components/: ChatScreen.tsx  Controls.tsx  ErrorBoundary.tsx  Messages.tsx  StatusBar.tsx  WakeHero.tsx
client/src/components/fields/: AppTextField.tsx
client/src/stores/: stores.ts
client/src/stores/state/: index.ts
client/src/stores/workflows/: callWorkflow.ts  (+1 more)
docker/: Dockerfile.bench  Dockerfile.dev  asound.conf
docker/wakeword-trainer/: Dockerfile
docs/: .session-status.md  README.md  architecture.md  audio-architecture.md  human-todo.md  ideas.md  session-status.md  voice-agent-architecture.md  wake-word.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe_realtime_tools.rs  test_wakeword.rs
src-tauri/lib/wakeword-native/: Cargo.toml  build.rs
src-tauri/lib/wakeword-native/src/: lib.rs
src-tauri/models/: kassandra.onnx
src-tauri/resources/: curriculum.json
src-tauri/src/: lib.rs  main.rs  teacher.rs
src-tauri/src/audio/: aec.rs  mic.rs  mod.rs  speaker.rs
src-tauri/src/qwen/: client.rs
src-tauri/src/wakeword/: detector.rs  mod.rs
wakeword-configs/: kassandra.yaml
(+5 files in other folders)
