[package]
name = "kassandra"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.15"
base64 = "0.22"
wakeword-native = { path = "lib/wakeword-native" }
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
dotenvy = "0.15"
thiserror = "2"
webrtc-audio-processing = { version = "~2.0", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
